objects/LAT_SalesAcademy__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Mês\Ano Referência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                    <default>true</default>
                    <label>Ativo</label>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <label>Nome do Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Academia_Vendas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Academia de Vendas</label>
    <listViews>
        <fullName>Academia_de_Vendas</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date__c</columns>
        <columns>account__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Academia de Vendas</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ACV-{0000}</displayFormat>
        <label>Academia de Vendas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academia de Vendas</pluralLabel>
    <recordTypes>
        <fullName>LAT_Distribuicao</fullName>
        <active>true</active>
        <label>Distribuição</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Modern_Trade</fullName>
        <active>true</active>
        <label>Modern Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_On_Trade</fullName>
        <active>true</active>
        <label>On Trade\Eventos</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>